// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Grid demos > demo: Basic 1`] = `
"<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 100%; max-width: 100%;">col</div>
</div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 50%; max-width: 50%;">col-12</div>
  <div class="ant-col" style="flex: 0 0 50%; max-width: 50%;">col-12</div>
</div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 33.33333333333333%; max-width: 33.33333333333333%;">col-8</div>
  <div class="ant-col" style="flex: 0 0 33.33333333333333%; max-width: 33.33333333333333%;">col-8</div>
  <div class="ant-col" style="flex: 0 0 33.33333333333333%; max-width: 33.33333333333333%;">col-8</div>
</div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;">col-6</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;">col-6</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;">col-6</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;">col-6</div>
</div>"
`;

exports[`Grid demos > demo: Flex 1`] = `
"<div data-v-77c5cdbb="" id="components-grid-demo-flex">
  <div data-v-77c5cdbb="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">sub-element align left</span></div>
  <div data-v-77c5cdbb="" class="ant-row" style="justify-content: flex-start;">
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
  </div>
  <div data-v-77c5cdbb="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">sub-element align center</span></div>
  <div data-v-77c5cdbb="" class="ant-row" style="justify-content: center;">
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
  </div>
  <div data-v-77c5cdbb="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">sub-element align right</span></div>
  <div data-v-77c5cdbb="" class="ant-row" style="justify-content: flex-end;">
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
  </div>
  <div data-v-77c5cdbb="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">sub-element monospaced arrangement</span></div>
  <div data-v-77c5cdbb="" class="ant-row" style="justify-content: space-between;">
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
  </div>
  <div data-v-77c5cdbb="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">sub-element align full</span></div>
  <div data-v-77c5cdbb="" class="ant-row" style="justify-content: space-around;">
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
  </div>
  <div data-v-77c5cdbb="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">sub-element align full</span></div>
  <div data-v-77c5cdbb="" class="ant-row" style="justify-content: space-evenly;">
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
    <div data-v-77c5cdbb="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">col-4</div>
  </div>
</div>"
`;

exports[`Grid demos > demo: FlexAlign 1`] = `
"<div data-v-e6b996a1="" id="components-grid-demo-flex-align">
  <div data-v-e6b996a1="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Align Top</span></div>
  <div data-v-e6b996a1="" class="ant-row" style="justify-content: center; align-items: flex-start;">
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-100">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-50">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-120">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-80">col-4</p>
    </div>
  </div>
  <div data-v-e6b996a1="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Align Middle</span></div>
  <div data-v-e6b996a1="" class="ant-row" style="justify-content: space-around; align-items: center;">
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-100">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-50">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-120">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-80">col-4</p>
    </div>
  </div>
  <div data-v-e6b996a1="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Align Bottom</span></div>
  <div data-v-e6b996a1="" class="ant-row" style="justify-content: space-between; align-items: flex-end;">
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-100">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-50">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-120">col-4</p>
    </div>
    <div data-v-e6b996a1="" class="ant-col" style="flex: 0 0 16.666666666666664%; max-width: 16.666666666666664%;">
      <p data-v-e6b996a1="" class="height-80">col-4</p>
    </div>
  </div>
</div>"
`;

exports[`Grid demos > demo: FlexOrder 1`] = `
"<div class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Normal</span></div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; order: 4;">1 col-order-4</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; order: 3;">2 col-order-3</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; order: 2;">3 col-order-2</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; order: 1;">4 col-order-1</div>
</div>
<div class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Responsive</span></div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;"> 1 col-order-responsive </div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;"> 2 col-order-responsive </div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;"> 3 col-order-responsive </div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%;"> 4 col-order-responsive </div>
</div>"
`;

exports[`Grid demos > demo: FlexStretch 1`] = `
"<div class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Percentage columns</span></div>
<div class="ant-row">
  <div class="ant-col" style="flex: 2 2 auto;">2 / 5</div>
  <div class="ant-col" style="flex: 3 3 auto;">3 / 5</div>
</div>
<div class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Fill rest</span></div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 100px;">100px</div>
  <div class="ant-col" style="flex: 1 1 auto;">auto</div>
</div>
<div class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Raw flex style</span></div>
<div class="ant-row">
  <div class="ant-col" style="flex: 1 1 200px;">1 1 200px</div>
  <div class="ant-col" style="flex: 0 1 300px;">0 1 300px</div>
</div>
<div class="ant-row" style="flex-wrap: nowrap;">
  <div class="ant-col" style="flex: 0 0 auto;">
    <div style="padding: 0px 16px;">none</div>
  </div>
  <div class="ant-col" style="flex: 1 1 auto;">auto with no-wrap</div>
</div>"
`;

exports[`Grid demos > demo: Gutter 1`] = `
"<div data-v-c59d452d="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Horizontal</span></div>
<div data-v-c59d452d="" class="ant-row" style="margin-left: -8px; margin-right: -8px;">
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
</div>
<div data-v-c59d452d="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Responsive</span></div>
<div data-v-c59d452d="" class="ant-row">
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
</div>
<div data-v-c59d452d="" class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left" role="separator" aria-orientation="horizontal"><span class="ant-divider-inner-text">Vertical</span></div>
<div data-v-c59d452d="" class="ant-row" style="margin-left: -8px; margin-right: -8px; row-gap: 24px;">
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
  <div data-v-c59d452d="" class="ant-col gutter-row" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
    <div data-v-c59d452d="" class="gutter-box">col-6</div>
  </div>
</div>"
`;

exports[`Grid demos > demo: Offset 1`] = `
"<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 33.33333333333333%; max-width: 33.33333333333333%;">col-8</div>
  <div class="ant-col" style="flex: 0 0 33.33333333333333%; max-width: 33.33333333333333%; margin-inline-start: 33.33333333333333%;">col-8</div>
</div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; margin-inline-start: 25%;">col-6 col-offset-6</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; margin-inline-start: 25%;">col-6 col-offset-6</div>
</div>
<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 50%; max-width: 50%; margin-inline-start: 25%;">col-12 col-offset-6</div>
</div>"
`;

exports[`Grid demos > demo: Playground 1`] = `
"<div data-v-14c1757f="">
  <div data-v-14c1757f="" style="margin-bottom: 16px;"><span data-v-14c1757f="">Columns: </span>
    <div data-v-14c1757f="" class="ant-slider" style="max-width: 300px;">
      <div class="ant-slider-rail"></div>
      <div class="ant-slider-track" style="left: 0%; width: 27.27272727272727%;"></div><!-- Steps/dots -->
      <!--v-if-->
      <!-- Marks -->
      <!--v-if-->
      <!-- Handle(s) -->
      <div class="ant-slider-handle" style="left: 27.27272727272727%;" role="slider" aria-valuemin="1" aria-valuemax="12" aria-valuenow="4" tabindex="0"></div>
    </div>
  </div>
  <div data-v-14c1757f="" style="margin-bottom: 16px;"><span data-v-14c1757f="">Horizontal Gutter: </span>
    <div data-v-14c1757f="" class="ant-slider" style="max-width: 300px;">
      <div class="ant-slider-rail"></div>
      <div class="ant-slider-track" style="left: 0%; width: 33.33333333333333%;"></div><!-- Steps/dots -->
      <!--v-if-->
      <!-- Marks -->
      <!--v-if-->
      <!-- Handle(s) -->
      <div class="ant-slider-handle" style="left: 33.33333333333333%;" role="slider" aria-valuemin="0" aria-valuemax="48" aria-valuenow="16" tabindex="0"></div>
    </div>
  </div>
  <div data-v-14c1757f="" style="margin-bottom: 16px;"><span data-v-14c1757f="">Vertical Gutter: </span>
    <div data-v-14c1757f="" class="ant-slider" style="max-width: 300px;">
      <div class="ant-slider-rail"></div>
      <div class="ant-slider-track" style="left: 0%; width: 33.33333333333333%;"></div><!-- Steps/dots -->
      <!--v-if-->
      <!-- Marks -->
      <!--v-if-->
      <!-- Handle(s) -->
      <div class="ant-slider-handle" style="left: 33.33333333333333%;" role="slider" aria-valuemin="0" aria-valuemax="48" aria-valuenow="16" tabindex="0"></div>
    </div>
  </div>
  <div data-v-14c1757f="" class="ant-row" style="margin-left: -8px; margin-right: -8px; row-gap: 16px;">
    <div data-v-14c1757f="" class="ant-col" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
      <div data-v-14c1757f="" class="demo-col">col-6</div>
    </div>
    <div data-v-14c1757f="" class="ant-col" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
      <div data-v-14c1757f="" class="demo-col light">col-6</div>
    </div>
    <div data-v-14c1757f="" class="ant-col" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
      <div data-v-14c1757f="" class="demo-col">col-6</div>
    </div>
    <div data-v-14c1757f="" class="ant-col" style="flex: 0 0 25%; max-width: 25%; padding-left: 8px; padding-right: 8px;">
      <div data-v-14c1757f="" class="demo-col light">col-6</div>
    </div>
  </div>
</div>"
`;

exports[`Grid demos > demo: Responsive 1`] = `
"<div class="ant-row">
  <div class="ant-col">Col</div>
  <div class="ant-col">Col</div>
  <div class="ant-col">Col</div>
</div>"
`;

exports[`Grid demos > demo: ResponsiveMore 1`] = `
"<div class="ant-row">
  <div class="ant-col">Col</div>
  <div class="ant-col">Col</div>
  <div class="ant-col">Col</div>
</div>"
`;

exports[`Grid demos > demo: Sort 1`] = `
"<div class="ant-row">
  <div class="ant-col" style="flex: 0 0 75%; max-width: 75%; inset-inline-start: 25%;">col-18 col-push-6</div>
  <div class="ant-col" style="flex: 0 0 25%; max-width: 25%; inset-inline-end: 75%;">col-6 col-pull-18</div>
</div>"
`;

exports[`Grid demos > demo: UseBreakpoint 1`] = `" Current break point:"`;
